fix header collapse opacity

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header .navbar {
 }
 
 .navbar-collapse {
-    background-color: rgba(255, 255, 255, 0.384);
+    background-color: rgba(255, 255, 255, 0.95);
 }
 
 .header_logo-sony svg {
